--- a/scrapper-ui/src/components/scrapper-data/Job.css
+++ b/scrapper-ui/src/components/scrapper-data/Job.css
@@ -3,7 +3,7 @@
   padding: 5px;
   margin: 2px;
   position: relative;
-  background: #d8ffd3;
+  background:rgba(216,255,211,0.5);
   border: solid 1px;
   border-radius: 5px;
   border-color: #AAAAAA;
