--- a/scrapper-ui/src/components/footer/AppFooter.css
+++ b/scrapper-ui/src/components/footer/AppFooter.css
@@ -1,11 +1,11 @@
 /* Footer
 -----------------------------------------------------------------------------*/
 .footer {
-	height: 30px;
+	height: auto;
+	min-height: 30px;
 	margin: 3px 0 3px 0;
 	padding: 5px;
 	background: #FFFFFF;
-	border: solid 1px;
-	border-radius: 5px;
+	background: rgba(255,255,255,0.5);
 	border-color: #AAAAAA;
 }
