--- a/scrapper-ui/src/components/left-sidebar/Sidebar.css
+++ b/scrapper-ui/src/components/left-sidebar/Sidebar.css
@@ -7,7 +7,6 @@
 	padding: 5px;
 	position: relative;
 	background: #FFFFFF;
-	border: solid 1px;
-	border-radius: 8px;
+	background: rgba(255,255,255,0.5);
 	border-color: #AAAAAA;
 }
