--- a/scrapper-ui/src/index.css
+++ b/scrapper-ui/src/index.css
@@ -1,4 +1,3 @@
-/* Eric Meyer's CSS Reset */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -26,6 +25,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	background-image: url("images/planebackground.jpg");
 }
 ol, ul {
 	list-style: none;
