--- a/scrapper-ui/src/components/scrapper-data/flightDataTable/flightDataTable.css
+++ b/scrapper-ui/src/components/scrapper-data/flightDataTable/flightDataTable.css
@@ -18,12 +18,12 @@
 	font-size: 10px;
 }
 
-.spinner {
+.flightDetailsWrapper {
 	height: auto;
-	padding-top: 50px;
-	padding-left: 50%;
-}
-
-.spinner-image {
-	height: 40px;
+	min-height: 100px;
+	display: flex;
+	flex-wrap: wrap;
+	border-color: #AAAAAA;
+	background: rgba(255,255,255,0.5);
+	margin-bottom: 5px;
 }
