--- a/scrapper-ui/src/components/header/AppHeader.css
+++ b/scrapper-ui/src/components/header/AppHeader.css
@@ -1,10 +1,14 @@
 /* Header
 -----------------------------------------------------------------------------*/
 .header {
-	height: 30px;
+	height: 40px;
 	margin: 3px 0 3px 0;
-	padding: 5px;
 	background: #FFFFFF;
 	background: rgba(255,255,255,0.5);
 	border-color: #AAAAAA;
+}
+
+.headerTitle{
+	padding: 5px;
+	display: inline;
 }
