updates to scrapper-ui

--- a/scrapper-ui/src/components/header/AppHeader.css
+++ b/scrapper-ui/src/components/header/AppHeader.css
@@ -6,6 +6,7 @@
 	background: #FFFFFF;
 	background: rgba(255,255,255,0.5);
 	border-color: #AAAAAA;
+	font-family: Source Sans Pro,sans-serif;
 }
 
 .headerTitle{
