--- a/scrapper-ui/src/components/header/newJobForm/NewJobForm.css
+++ b/scrapper-ui/src/components/header/newJobForm/NewJobForm.css
@@ -41,3 +41,9 @@
 	font-size: 16px;
 	font-family: Source Sans Pro,sans-serif;
 }
+
+.addImage {
+	height: 20px;
+	display: inline-block;
+	padding-top: 10px;
+}
