--- a/scrapper-ui/src/components/scrapper-data/jobs/Job.css
+++ b/scrapper-ui/src/components/scrapper-data/jobs/Job.css
@@ -13,6 +13,27 @@
   display: inline;
 }
 
+.lastSuccess{
+  display: inline;
+  font-size: 9px;
+  padding-left: 5px;
+  color: rgb(119, 119, 119);
+}
+
 .inactive {
-  background: #ffd7d7;
+  background: #ffd8d8;
+}
+
+.deleteImage {
+  height: 15px;
+  padding-top: 1px;
+  float: right;
+}
+
+.statusImage {
+  height: 15px;
+  padding-top: 1px;
+  padding-right: 4px;
+  float: right;
+  opacity: 0.5;
 }
