--- a/scrapper-ui/src/components/scrapper-data/jobs/Job.css
+++ b/scrapper-ui/src/components/scrapper-data/jobs/Job.css
@@ -24,6 +24,14 @@
   background: #ffd8d8;
 }
 
+.idle {
+  background: #fcd685;
+}
+
+.idle:hover {
+  content: "This is some text";
+}
+
 .deleteImage {
   height: 15px;
   padding-top: 1px;
@@ -36,4 +44,34 @@
   padding-right: 4px;
   float: right;
   opacity: 0.5;
+}
+
+.statusImage:hover {
+  content: "text";
+}
+
+/* Tooltip container */
+.tooltip {
+  float: right;
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: max-content;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 10px;
+  margin: -30px 0 0 15px;
+  border-radius: 6px;
+
+  /* Position the tooltip text - see examples below! */
+  position: absolute;
+  z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
 }
